<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnaSayfaFragment">


    <TextView
        android:id="@+id/ozgecmisbaslikAna"
        android:layout_width="254dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        android:fontFamily="sans-serif"
        android:text="@string/z_ge_mi"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cvImage"
        android:layout_width="103dp"
        android:layout_height="92dp"
        android:layout_marginBottom="356dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/icons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/girisButton"
        android:layout_width="217dp"
        android:layout_height="59dp"
        android:layout_marginTop="80dp"
        android:text="@string/giri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvImage" />


</androidx.constraintlayout.widget.ConstraintLayout>